# ChessAlisaOsipova

./: CMakeLists.txt  README.md  main.cpp
body/: AI.cpp  AI.h  Bitboard.h  KingMasks.h  KnightMasks.h  LegalMoveGen.cpp  LegalMoveGen.h  LegalMoveGenTester.cpp  LegalMoveGenTester.h  Move.cpp  Move.h  MoveList.cpp  MoveList.h  MoveSorter.cpp  MoveSorter.h  PassedPawnMasks.h  Pieces.cpp  Pieces.h  Position.cpp  Position.h  PsLegalMoveMaskGen.cpp  PsLegalMoveMaskGen.h  RepetitionHistory.cpp  RepetitionHistory.h  SearchInterrupter.cpp  SearchInterrupter.h  SlidersMasks.h  StaticEvaluator.cpp  StaticEvaluator.h  Storage.cpp  Storage.h  TranspositionTable.cpp  TranspositionTable.h  UI.cpp  UI.h  ZobristHash.cpp  ZobristHash.h  ZobristHashConstants.h  chess.sln  chess.vcxproj  (+1 more)
